@@ -33,6 +33,5 @@ Collate:
     'shape.R'
     'smppmexample.R'
     'tabresul.R'
-    'tabresulSingl.R'
     'transfo.R'
 RoxygenNote: 6.0.1
