@@ -16,3 +16,4 @@ export(nameRows)
 export(nzdsr)
 export(plautrans)
 export(productSpace)
+export(tabresul)
